# openstack-images-sync

./: README.md  pyproject.toml
openstack_images_sync/: __main__.py
openstack_images_sync/core/: config.py  logging.py
openstack_images_sync/sync/: mirror.py  synchronize.py
